@@ -1,6 +1,6 @@
 Package: arulesViz
-Version: 1.1-0
-Date: 2015-12-13
+Version: 1.1-0.1
+Date: 2016-xx-xx
 Title: Visualizing Association Rules and Frequent Itemsets
 Author: Michael Hahsler and Sudheer Chelluboina
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>
