@@ -93,7 +93,7 @@ closer together and make the plot clearer.}
 interest for reordering (default is the visualized measure)}
 \item{"reorderMethod","reorderControl","reorderDist"}{seriation method, control arguments and distance method (default "euclidean")
 used for reordering (see \code{seriate()} method in \pkg{seriation})}
-\item{"col"}{ a vector of n colors used for the plot (default: 100 gray values)}
+\item{"col"}{ a vector of n colors used for the plot (default: 100 heat colors)}
 \item{"xlim","ylim"}{limits}
 }
 
@@ -114,7 +114,8 @@ The list of control parameters for this method is
 can be any function computing a scalar from a vector
 (e.g., min, mean, median (default), sum, max). It is also used
 to reorder the balloons in the plot.}
-\item{"col"}{color palette (default is 100 gray values.)}
+\item{"col"}{color palette (default is 100 heat colors.)}
+\item{"gp_labels"}{a \code{gpar()} object used for labes. Can be used to set font and font size. }
 }
 
 Interactive manipulations are available. 
